--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
+annotated-types==0.7.0
 black==25.12.0
 boto3==1.42.16
 botocore==1.42.16
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
+idna==3.11
 jmespath==1.0.1
 librt==0.7.4
 mypy==1.19.1
 mypy_extensions==1.1.0
+numpy==2.4.0
 packaging==25.0
+pandas==2.3.3
 pathspec==0.12.1
 platformdirs==4.5.1
+pyarrow==22.0.0
+pydantic==2.12.5
+pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytokens==0.3.0
+pytz==2025.2
+requests==2.32.5
 ruff==0.14.10
 s3transfer==0.16.0
 six==1.17.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.2
