--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.4
 click==8.3.1
 idna==3.11
 jmespath==1.0.1
+kagglehub==0.3.13
 librt==0.7.4
 mypy==1.19.1
 mypy_extensions==1.1.0
@@ -22,10 +23,12 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytokens==0.3.0
 pytz==2025.2
+PyYAML==6.0.3
 requests==2.32.5
 ruff==0.14.10
 s3transfer==0.16.0
 six==1.17.0
+tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
