try: decision tree on income data

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.4
 click==8.3.1
 idna==3.11
 jmespath==1.0.1
+joblib==1.5.3
 kagglehub==0.3.13
 librt==0.7.4
 mypy==1.19.1
@@ -27,7 +28,10 @@ PyYAML==6.0.3
 requests==2.32.5
 ruff==0.14.10
 s3transfer==0.16.0
+scikit-learn==1.8.0
+scipy==1.16.3
 six==1.17.0
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
