--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,153 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+alembic==1.17.2
+annotated-doc==0.0.4
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.12.0
+attrs==25.4.0
+bcrypt==5.0.0
 black==25.12.0
+blinker==1.9.0
 boto3==1.42.16
 botocore==1.42.16
+brotli==1.2.0
+cachetools==6.2.4
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cloudpickle==3.1.2
+coloredlogs==15.0.1
+contourpy==1.3.3
+cryptography==46.0.3
+cycler==0.12.1
+databricks-sdk==0.76.0
+deepdiff==8.6.1
+docker==7.1.0
+fastapi==0.128.0
+filelock==3.20.1
+Flask==3.1.2
+flask-cors==6.0.2
+flatbuffers==25.12.19
+fonttools==4.61.1
+frozenlist==1.8.0
+fsspec==2025.12.0
+gevent==25.9.1
+geventhttpclient==2.3.7
+gitdb==4.0.12
+GitPython==3.1.45
+google-auth==2.45.0
+graphene==3.4.3
+graphql-core==3.2.7
+graphql-relay==3.2.0
+greenlet==3.3.0
+gunicorn==23.0.0
+h11==0.16.0
+huey==2.5.5
+humanfriendly==10.0
 idna==3.11
+importlib-metadata==6.11.0
+iniconfig==2.3.0
+invoke==2.2.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.3
+json5==0.12.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kagglehub==0.3.13
+kiwisolver==1.4.9
 librt==0.7.4
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+mdurl==0.1.2
+ml_dtypes==0.5.4
+mlflow==3.8.1
+mlflow-skinny==3.8.1
+mlflow-tracing==3.8.1
+mock==4.0.3
+mpmath==1.3.0
+multidict==6.7.0
 mypy==1.19.1
 mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.6.1
 numpy==2.4.0
+omegaconf==2.3.0
+onnx==1.20.0
+onnxruntime==1.23.2
+opentelemetry-api==1.39.1
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
+orderly-set==5.5.0
 packaging==25.0
 pandas==2.3.3
+paramiko==4.0.0
 pathspec==0.12.1
+pillow==12.0.0
 platformdirs==4.5.1
+pluggy==1.6.0
+propcache==0.4.1
+protobuf==4.25.8
+psutil==7.2.1
 pyarrow==22.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
+Pygments==2.19.2
+PyNaCl==1.6.1
+pyparsing==3.3.1
+pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-rapidjson==1.23
 pytokens==0.3.0
 pytz==2025.2
 PyYAML==6.0.3
+referencing==0.37.0
 requests==2.32.5
+rich==13.9.4
+rpds-py==0.30.0
+rsa==4.9.1
 ruff==0.14.10
 s3transfer==0.16.0
+sagemaker==3.3.0
+sagemaker-core==2.3.0
+sagemaker-mlflow==0.2.0
+sagemaker-mlops==1.3.0
+sagemaker-schema-inference-artifacts==0.0.5
+sagemaker-serve==1.3.0
+sagemaker-train==1.3.0
+schema==0.7.8
 scikit-learn==1.8.0
 scipy==1.16.3
 six==1.17.0
+smdebug-rulesconfig==1.0.1
+smmap==5.0.2
+SQLAlchemy==2.0.45
+sqlparse==0.5.5
+starlette==0.50.0
+sympy==1.14.0
+tblib==3.2.2
 threadpoolctl==3.6.0
+torch==2.9.1
 tqdm==4.67.1
+tritonclient==2.64.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
+uvicorn==0.40.0
+Werkzeug==3.1.4
+yarl==1.22.0
+zipp==3.23.0
+zope.event==6.1
+zope.interface==8.1.1
